Customised result page, pop up page. Added translation, pronunciation shortcut. switch google.cn to google.com

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -17,10 +17,10 @@
                 for="translate_input"
                 data-i18n-name="InputHint"
             ></label>
-            <div class="row" id="page-translate">
+            <!-- <div class="row" id="page-translate">
                 <a id="google-page-translate" class="i18n" data-i18n-name="GooglePageTranslate"></a>
                 <a id="youdao-page-translate" class="i18n" data-i18n-name="YouDaoPageTranslate"></a>
-            </div>
+            </div> -->
             <div id="setting">
                 <div class="row" style="justify-content: space-between">
                     <label
@@ -54,10 +54,10 @@
                     </div>
                 </div>
             </div>
-            <div class="row" id="setting-switch">
+            <!-- <div class="row" id="setting-switch">
                 <i class="translate-icon translate-icon-arrow-up set" id="arrow-up"></i>
                 <i class="translate-icon translate-icon-arrow-down set" id="arrow-down"></i>
-            </div>
+            </div> -->
         </div>
 
         <footer>
